# AdventOfCode

./: .gitignore
c/: CMakeLists.txt
c/day_01/: CMakeLists.txt
c/day_01/include/: day_01.h
c/day_01/src/: day_01.c  part_1.c  part_2.c
c/day_02/: CMakeLists.txt
c/day_02/include/: day_02.h
c/day_02/src/: day_02.c  part_1.c  part_2.c
